--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="left">
+        <a href="">About</a>
+        <a href="">Store</a>
+      </div>
+
+      <div class="right">
+        <a href="">Gmail</a>
+        <a href="">İmages</a>
+        <img src="./images/appicon.png" alt="" id="app" />
+        <button class="btn">Sign in</button>
+      </div>
+    </header>
+
+    <div class="google">
+      <img src="./images/googlelogo.png" alt="" />
+    </div>
+
+    <div class="search">
+      <img class="mg" src="./images/magnifying_glass.jpg" width="20px" alt="" />
+
+      <input type="text" />
+
+      <img
+        class="mi"
+        src="./images/google_microphone.png"
+        width="15px"
+        alt=""
+      />
+    </div>
+    <div class="btn1">
+      <button class="button-box">Google Search</button>
+      <button class="button-box">Im Felling Lucky</button>
+    </div>
+    <div class="language">
+      <p>Other languages you can use Google: <a href="#">English</a></p>
+    </div>
+
+    <footer>
+      <div class="canada">Canada</div>
+      <div class="footer-left">
+        <a href="">Adversiting</a>
+        <a href="">Bussiness</a>
+        <a href="">How search work</a>
+      </div>
+      <div class="footer-right">
+        <a href="">Privacy</a>
+        <a href="">Term</a>
+        <a href="">Seeing</a>
+      </div>
+    </footer>
+  </body>
 </html>
